# sc-plugin-rs

./: Cargo.toml  README.md  build.rs  plugin.h
